--- a/frontend-client/package.json
+++ b/frontend-client/package.json
@@ -16,8 +16,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-router-hash-link": "^2.4.3",
-    "react-toastify": "^10.0.5",
-    "vercel": "^37.0.0"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
