--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-  "builds": [
-    {
-      "src": "frontend/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
+  "src": "packages/frontend",
+  "use": "@vercel/static-build",
+  "config": {
+    "distDir": "dist"
+  },
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }],
+  "env": {
+    "REACT_APP_API_URL": "https://your-backend-service.onrender.com"
+  }
 }
