--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "src": "frontend-client/package.json",
+  "src": "frontend-client",
   "use": "@vercel/static-build",
   "config": {
     "distDir": "dist"
